feature(updated-ui)
Changed icons and name of the application (for both platforms)
Refactored main page code
Updated colors and added images

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jumbo.barcode_prototype">
    <application
-        android:label="barcode_prototype"
+        android:label="Jumbo Demo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
