Finish page navigation with bottom navbar.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
 
   # Fetching data using http requests
   http: ^0.13.5
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
