--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,17 +83,27 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Jumbo
+      fonts:
+        - asset: assets/fonts/Jumbo-Regular.ttf
+        - asset: assets/fonts/Jumbo-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Jumbo-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Jumbo-Italic-Bold.ttf
+          weight: 700
+          style: italic
+        - asset: assets/fonts/Jumbo-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Jumbo-Black-Italic.ttf
+          weight: 900
+          style: italic
+    # - family: Trajan Pro
+    #   fonts:
+    #     - asset: fonts/TrajanPro.ttf
+    #     - asset: fonts/TrajanPro_Bold.ttf
+    #       weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
