--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jumbo.barcode_prototype">
+    <uses-permission android:name="android.permission.VIBRATE"/>
    <application
         android:label="Jumbo Demo"
         android:name="${applicationName}"
