--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   firebase_core: ^2.2.0
   firebase_database: ^10.0.5
 
+  # Sounds & vibrations
+  audioplayers: ^1.1.1
+  flutter_vibrate: ^1.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -81,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
+     - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
